[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Levels/MetalValley/metalvalley_tileset.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/MetalValley/PlayerProjectileDetector.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/MetalValley/FlamableBarrier.gd" type="Script" id=3]
[ext_resource path="res://src/Effects/Textures/explosion.png" type="Texture" id=4]
[ext_resource path="res://src/Effects/Fire/fire2.png" type="Texture" id=5]
[ext_resource path="res://src/Effects/Materials/flamable_particles_1.tres" type="Material" id=6]
[ext_resource path="res://src/Effects/Materials/flamable_flames_particles.tres" type="Material" id=7]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=8]
[ext_resource path="res://src/Effects/Textures/remains.png" type="Texture" id=9]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47, 38 )

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=5]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="TileSet" id=6]
0/name = "metalvalley_tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 272, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "metalvalley_tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 384, 288, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "metalvalley_tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 384, 304, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "metalvalley_tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 320, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "metalvalley_tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 400, 288, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[node name="FlamableBarrier" type="Node2D"]
script = ExtResource( 3 )

[node name="staticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="collisionShape2D" type="CollisionShape2D" parent="staticBody2D"]
position = Vector2( 24, 32 )
shape = SubResource( 1 )

[node name="ProjectileDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="collisionShape2D" type="CollisionShape2D" parent="ProjectileDetector"]
visible = false
position = Vector2( 32, 32 )
shape = SubResource( 2 )

[node name="Explosion Particles" type="Particles2D" parent="."]
material = SubResource( 3 )
position = Vector2( 32, 30 )
z_index = 2
emitting = false
amount = 6
lifetime = 0.5
one_shot = true
local_coords = false
process_material = ExtResource( 6 )
texture = ExtResource( 4 )

[node name="Fire" type="Particles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 32, 29 )
z_index = 3
emitting = false
amount = 16
lifetime = 0.5
one_shot = true
explosiveness = 0.62
randomness = 1.0
local_coords = false
process_material = ExtResource( 7 )
texture = ExtResource( 5 )

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -4.267
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[node name="remains_particles" type="Particles2D" parent="."]
material = SubResource( 5 )
position = Vector2( 25, 29 )
z_index = -1
emitting = false
amount = 16
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 10 )
texture = ExtResource( 9 )

[node name="tileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
compatibility_mode = true
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 131071, 1, 0, 65536, 1, 0, 65537, 4, 0, 65538, 1, 0, 65539, 4, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 262143, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0 )

[connection signal="body_entered" from="ProjectileDetector" to="ProjectileDetector" method="_on_area2D_body_entered"]
[connection signal="projectile_detected" from="ProjectileDetector" to="." method="_on_projectile_detected"]
